tests/vertical-slice/reject/array_repeat_non_clone_element.hew
// Reject fixture: `[r; N]` where the element transitively holds a collection
// field must fail closed. A record with a `Vec` field IS a valid Vec element
// for copy-in `.push` (the outer Vec's per-element drop_fn frees each clone),
// but array-repeat clone-N is a distinct lowering that byte-copies the source
// into an unconsumed repeat-value temp aliasing its collection buffer; both the
// source and the temp then drop it (double-free). So `[Bag; N]` must fail closed
// until the repeat clone-N path recurses through collection fields.
type Bag {
    items: Vec<i64>;
}

fn main() -> i64 {
    let b = Bag { items: [1, 2, 3] };
    let bs = [b; 3];
    0
}
